[tool.poetry]
name = "errors_employees"
version = "0.1.0"
description = ""
authors = ["geydarovr <www.rufat@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
